[misc] 测试了一下v6版router中的路由嵌套

--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
+    "@types/qs": "^6.9.7",
+    "dayjs": "^1.11.7",
+    "qs": "^6.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
