--- a/package.json
+++ b/package.json
@@ -18,16 +18,20 @@
     "dayjs": "^1.11.7",
     "qs": "^6.11.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^5.0.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "autoprefixer": "^10.4.14",
     "less": "^4.1.3",
+    "postcss": "^8.4.22",
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
+    "tailwindcss": "^3.3.1",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
