--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/qs": "^6.9.7",
+    "@types/react-helmet": "^6.1.6",
+    "axios": "^1.4.0",
+    "crypto-js": "^4.1.1",
     "dayjs": "^1.11.7",
     "qs": "^6.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
