--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/crypto-js": "^4.1.1",
     "@types/qs": "^6.9.7",
     "@types/react-helmet": "^6.1.6",
+    "@types/sails.io.js": "^1.0.6",
     "axios": "^1.4.0",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.7",
@@ -24,7 +25,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "sails.io.js": "^1.2.1",
+    "socket.io-client": "2.3.0"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^5.0.0",
