--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.8",
+    "@mui/base": "5.0.0-beta.10",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
+    "@mui/system": "^5.14.4",
     "@types/crypto-js": "^4.1.1",
     "@types/qs": "^6.9.7",
     "@types/react-helmet": "^6.1.6",
